--- a/config/content.htm
+++ b/config/content.htm
@@ -10,8 +10,15 @@
 <p>每週各分組組員必須將參與分組協同過程之電腦操作流程錄成影片後, 上傳至各自的 Youtube 帳號區, 並嵌入各分組網站頁面中.</p><h2>Week1</h2>
 <p><span>國立虎尾科技大學機械設計工程系計算機程式 - 一乙第八週第三部分, 說明如何利用 Eric6 IDE 建立所需的 calculator 計算機程式對話表單. 過程中主要學習如何啟動 Eric6, 如何建立 Eric6 專案, 如何切換 Sources tab 與 Form tab, 如何在進入 Qt Designer 後利用格點布局, 建立按鈕與 Line Edit 部件.</span></p>
 <p><iframe width="560" height="315" src="https://www.youtube.com/embed/g4ksXq7sQ4M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe></p>
-<h2>week2</h2><h2>week3</h2><h2>week4</h2>
-<h2>week6</h2><p><iframe width="560" height="314" src="//www.youtube.com/embed/mCT9r39uxtM" allowfullscreen="allowfullscreen"></iframe></p><h2>week7</h2><h1>Python 手冊</h1>
+<h2>week2</h2><p>，</p><p><iframe width="560" height="314" src="//www.youtube.com/embed/yFpTRE2iBzQ" allowfullscreen="allowfullscreen"></iframe></p><h2>week3</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/eArTPBfPTy0" allowfullscreen="allowfullscreen"></iframe></p><h2>week4</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/dCxisBHMdoc" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/qnv0BW0n53s" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/zLjRiIqUlbQ" allowfullscreen="allowfullscreen"></iframe></p><h2>week6</h2>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/mCT9r39uxtM" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/4-Qd9Hp-C-k" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/zF-0b2RXN5w" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="560" height="314" src="//www.youtube.com/embed/ux124O1637s" allowfullscreen="allowfullscreen"></iframe></p><h2>week7</h2><h1>Python 手冊</h1>
 <p>計算機程式教材:&nbsp;&nbsp;<a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a>&nbsp;</p>
 <p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p><h1>OnShape 手冊</h1>
 <p><a href="https://www.onshape.com/">https://www.onshape.com/</a>&nbsp;</p>
